<resources>
    <string name="app_name">RevisaCar</string>
    <string name="text_logo">RevisaCar</string>
    <string name="entrar">Entrar</string>
    <string name="text_cadastro">Cadastre-se</string>
    <string name="pag_cadastro">Bem-vindo à RevisaCar !</string>
    <string name="meu_veiculo">Meu Veículo</string>
    <string name="incluir">Incluir Abastecimento</string>
    <string name="visulizar">Visualizar Abastecimento</string>
    <string name="revisao">Incluir Revisão</string>
    <string-array name="spinner_comb">
        <item>Gasolina</item>
        <item>Etanol</item>
        <item>Diesel</item>
    </string-array>
</resources>