<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MeuVeiculo">

    <TextView
        android:id="@+id/meu_veiculo"
        android:text="@string/meu_veiculo"
        android:textSize="42dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <ImageButton
        android:id="@+id/abastecimento"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sinal_mais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meu_veiculo" />

    <TextView
        android:id="@+id/text_abastecimento"
        style="@style/TextTelaPrincipal"
        android:text="@string/incluir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abastecimento"
        />

    <ImageButton
        android:id="@+id/visualizar_abastecimento"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintStart_toEndOf="@+id/abastecimento"
        app:layout_constraintTop_toBottomOf="@id/meu_veiculo"
        android:background="@drawable/fatura"
        />

    <TextView
        android:id="@+id/text_visualizar_abastecimento"
        style="@style/TextTelaPrincipal"
        android:text="@string/visulizar"
        android:layout_marginLeft="200dp"
        app:layout_constraintStart_toStartOf="@+id/text_abastecimento"
        app:layout_constraintTop_toBottomOf="@+id/abastecimento" />

    <ImageButton
        android:id="@+id/revisao"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_abastecimento"
        android:background="@drawable/automovel"
        />

    <TextView
        style="@style/TextTelaPrincipal"
        android:id="@+id/text_revisao"
        android:text="@string/revisao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/revisao"
   />

    <ImageButton
        android:id="@+id/visualizar_revisao"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintStart_toEndOf="@id/revisao"
        app:layout_constraintTop_toBottomOf="@id/text_visualizar_abastecimento"
        android:background="@drawable/revisao"
        />

    <TextView
        android:id="@+id/text_visualizar_revisao"
        style="@style/TextTelaPrincipal"
        android:text="Visualizar Revisões"
        android:layout_marginLeft="200dp"
        app:layout_constraintStart_toStartOf="@+id/text_revisao"
        app:layout_constraintTop_toBottomOf="@+id/visualizar_revisao" />

    <ImageButton
        android:id="@+id/grafico"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_revisao"
        android:background="@drawable/grafico"
        />

    <TextView
        android:id="@+id/text_grafico"
        style="@style/TextTelaPrincipal"
        android:text="Visualizar Gráfico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grafico"
        />


</androidx.constraintlayout.widget.ConstraintLayout>