<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormLogin"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_revisacar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/text_logo"
        android:text="@string/text_logo"
        style="@style/TextLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />
    
    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_logo"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_text"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"/>

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_text"
        android:hint="Senha"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@id/containerComponents"
        app:layout_constraintEnd_toEndOf="@id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar"
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        />

    <TextView
        android:id="@+id/text_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cadastro"
        style="@style/TextCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponents"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>